--- a/index.html
+++ b/index.html
@@ -1,202 +1,131 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosso Site de Aplicativos</title>
+    <title>Resenha Free</title>
     <style>
         body {
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(45deg, #2c3e50, #4ca1af);
             margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #0f2027;
-            background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
-            background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
-            color: white;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.7);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        header h1 {
-            font-size: 24px;
-            margin: 0;
-        }
-
-        header nav a {
-            margin-left: 20px;
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-            transition: color 0.3s ease;
-        }
-
-        header nav a:hover {
-            color: #00c6ff;
-        }
-
-        .hero {
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            color: #fff;
+        }
+
+        .modal {
+            background-color: #fff;
+            color: #333;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            max-width: 600px;
+            width: 100%;
             text-align: center;
-            background-image: url('https://images.unsplash.com/photo-1498050108023-c5249f4df085');
-            background-size: cover;
-            background-position: center;
         }
 
-        .hero-text {
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 50px;
-            border-radius: 15px;
-            max-width: 800px;
+        .modal h2 {
+            margin-bottom: 20px;
+            font-size: 24px;
         }
 
-        .hero-text h1 {
-            font-size: 48px;
+        .modal p {
+            font-size: 16px;
+            line-height: 1.6;
             margin-bottom: 20px;
         }
 
-        .hero-text p {
-            font-size: 20px;
-            margin-bottom: 30px;
-        }
-
-        .telegram-btn {
-            background: linear-gradient(45deg, #0088cc, #006699);
+        .modal button {
+            padding: 15px 30px;
             border: none;
             border-radius: 50px;
-            padding: 15px 30px;
             font-size: 18px;
             cursor: pointer;
-            color: white;
-            text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            margin-top: 20px;
             transition: background 0.3s ease;
-        }
-
-        .telegram-btn img {
-            width: 24px;
-            height: 24px;
-            margin-right: 10px;
-        }
-
-        .telegram-btn:hover {
-            background: linear-gradient(45deg, #006699, #0088cc);
-        }
-
-        .content {
-            padding: 50px;
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-
-        .content h2 {
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
-
-        .content p {
-            font-size: 18px;
-            line-height: 1.6;
-        }
-
-        .content .section {
-            margin-bottom: 50px;
-        }
-
-        .footer {
-            padding: 20px;
-            text-align: center;
-            background-color: rgba(0, 0, 0, 0.9);
-            font-size: 14px;
-        }
-
-        .footer a {
-            color: #00c6ff;
+            margin: 10px;
             text-decoration: none;
-            transition: color 0.3s ease;
         }
 
-        .footer a:hover {
+        .accept-btn {
+            background-color: #28a745;
             color: white;
+        }
+
+        .accept-btn:hover {
+            background-color: #218838;
+        }
+
+        .decline-btn {
+            background-color: #dc3545;
+            color: white;
+        }
+
+        .decline-btn:hover {
+            background-color: #c82333;
+        }
+
+        .hidden {
+            display: none;
         }
     </style>
 </head>
-
 <body>
 
-    <header>
-        <h1>Nosso Site de Aplicativos</h1>
-        <nav>
-            <a href="#sobre">Sobre</a>
-            <a href="#acompanhamento">Acompanhe os Apps</a>
-            <a href="#intencao">Nossa Intenção</a>
-            <a href="#anunciar">Anuncie Conosco</a>
-            <a href="termos.html">Termos de Uso</a>
-        </nav>
-    </header>
-
-    <div class="hero">
-        <div class="hero-text">
-            <h1>Bem-vindo ao Nosso Site de Aplicativos</h1>
-            <p>Descubra, baixe e acompanhe os melhores aplicativos com facilidade.</p>
-            <a href="#acompanhamento" class="telegram-btn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-                Acompanhe-nos no Telegram
-            </a>
-        </div>
+    <!-- Modal de Termos de Uso -->
+    <div class="modal" id="terms-modal">
+        <h2>Termos de Uso</h2>
+        <p>
+            Bem-vindo ao Resenha Free, um site dedicado ao download de aplicativos para Android. 
+            Nós nos comprometemos a oferecer conteúdo de qualidade e a proteger os direitos autorais dos criadores. 
+            Não temos a intenção de infringir quaisquer direitos autorais, e todos os aplicativos são fornecidos para fins de análise e teste.
+        </p>
+        <p>
+            Ao acessar nosso site, você concorda em não redistribuir os aplicativos baixados sem a permissão adequada dos criadores. 
+            Caso tenha interesse em anunciar em nosso site, entre em contato conosco através do nosso canal no Telegram.
+        </p>
+        <p>
+            Se você concorda com os termos, clique em "Aceitar". Caso contrário, clique em "Recusar" para sair do site.
+        </p>
+        <button class="accept-btn" id="accept-btn">Aceitar</button>
+        <button class="decline-btn" id="decline-btn">Recusar</button>
     </div>
 
-    <div class="content">
-        <div id="sobre" class="section">
-            <h2>O que é nosso site?</h2>
-            <p>Nosso site é dedicado a fornecer uma ampla variedade de aplicativos para download. Temos uma seleção
-                diversificada para atender às suas necessidades, sejam elas de entretenimento, utilidade ou produtividade.</p>
-        </div>
+    <!-- Conteúdo Principal -->
+    <div id="main-content" class="hidden">
+        <h1>Bem-vindo ao Resenha Free!</h1>
+        <p>Aqui você encontra os melhores aplicativos para Android, todos disponíveis para download gratuito.</p>
+        <p>Siga nosso canal no Telegram para ficar por dentro das novidades e acompanhar os últimos lançamentos.</p>
 
-        <div id="acompanhamento" class="section">
-            <h2>Por onde acompanho os apps?</h2>
-            <p>Acompanhe todos os lançamentos e novidades através do nosso canal no Telegram. Receba atualizações
-                frequentes sobre novos aplicativos e fique por dentro das últimas tendências do mundo digital.</p>
-            <a href="https://t.me/resenha_free" class="telegram-btn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-                Siga nosso Canal no Telegram
-            </a>
-        </div>
+        <!-- Botão do Telegram -->
+        <a href="https://t.me/resenha_free" class="telegram-btn">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 20px; height: 20px; margin-right: 10px;">
+            Acesse nosso Telegram
+        </a>
 
-        <div id="intencao" class="section">
-            <h2>Nossa Intenção</h2>
-            <p>Não temos a intenção de infringir qualquer direito autoral. Todos os aplicativos compartilhados são de
-                fontes públicas, e incentivamos os usuários a apoiar os desenvolvedores comprando versões oficiais sempre
-                que possível.</p>
-        </div>
-
-        <div id="anunciar" class="section">
+        <!-- Anunciar Conosco -->
+        <div class="details">
             <h2>Quer anunciar em nossas abas?</h2>
-            <p>Entre em contato conosco através do nosso canal do Telegram para mais informações sobre como anunciar no
-                nosso site e alcançar uma audiência engajada e interessada.</p>
+            <p>Entre em contato conosco pelo nosso canal do Telegram.</p>
             <a href="https://t.me/resenha_free" class="telegram-btn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 20px; height: 20px; margin-right: 10px;">
                 Fale Conosco no Telegram
             </a>
         </div>
     </div>
 
-    <div class="footer">
-        <p>© 2024 Nosso Site de Aplicativos. Todos os direitos reservados. | <a href="termos.html">Termos de Uso</a></p>
-    </div>
+    <script>
+        document.getElementById('accept-btn').addEventListener('click', function() {
+            document.getElementById('terms-modal').classList.add('hidden');
+            document.getElementById('main-content').classList.remove('hidden');
+        });
 
+        document.getElementById('decline-btn').addEventListener('click', function() {
+            window.location.href = 'https://www.google.com';
+        });
+    </script>
 </body>
-
 </html>
