--- a/minecraft.html
+++ b/minecraft.html
@@ -151,7 +151,7 @@
     <!-- Anúncio Inicial -->
     <div id="ad-container" class="ad-container">
         <div class="ad-content">
-            <a href="https://t.me/parallaxcloud" target="_blank">
+            <a href="https://www.bbrbet51.com/c-wRZKemom?lang=pt" target="_blank">
                 <img src="https://raw.githubusercontent.com/TheKaceta/downloads/main/anuncio/teleg.png" alt="Anúncio">
             </a>
             <div class="timer" id="timer">Fechar em 10 segundos...</div>
